ui - fix menu width on mobile

--- a/src/assets/sass/lbd/_navbars.scss
+++ b/src/assets/sass/lbd/_navbars.scss
@@ -95,7 +95,7 @@
 
 .main-panel .navbar-fixed{
     position: fixed;
-    width: calc(100% - 260px);
+    width: calc(100% - 230px);
     right: 0;
     z-index: 1031;
 }
